add images and pdf

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    
   <h1 class="title-container">Software Engineer. Clinical Researcher. Health Educator.</h1> 
     <img class="profilepic"
-         src="https://cdn.glitch.com/98275561-882d-4111-9705-1b927de65bc4%2Fheadshot.jpg?1540774586265"
+         src="images/headshot.jpg"
              alt="profilePic">
 
     <nav class="navigationMenu">
@@ -38,7 +38,7 @@
         <a href="https://www.youtube.com/watch?v=OtG0iYPGEdI&amp=&t=49s" target="blank">
           <i class="fa fa-youtube" style="font-size:80px; color: black"></i></a>
 
-        <a href="https://cdn.glitch.com/98275561-882d-4111-9705-1b927de65bc4%2FStravers_Resume.pdf?1541449986972"> 
+        <a href="images/Stravers_Resume.pdf"> 
           <i class="fa fa-file-text-o" style="font-size:80px; color: black"></i></a>
 
         <a href="projects.html">
