add demo day program and update image links

--- a/projects.html
+++ b/projects.html
@@ -27,8 +27,8 @@
             <a href="https://harm-reduction-tracker.herokuapp.com/" target="blank">Live Site  |</a> 
             <a href="https://github.com/lstravers/traction-app" target="blank">Github</a>
           </div>
-    <p>This mobile and desktop app aims to aid the <a href="http://www.nchrc.org/" target="blank">NC Harm Reduction Coalition (NC HRC)</a> and other groups in fighting the statewide opioid crisis. Developed by a team of 5 junior developers in 2.5 weeks as a capstone project presented at <a href="https://cdn.glitch.com/98275561-882d-4111-9705-1b927de65bc4%2FDemoDayProgram_2018_10_18.pdf?1540774609614" target="blank">Demo Day</a> from <a href="https://www.momentumlearn.com/" target="blank">Momentum's</a> immersive coding program. It's twofold function will allow NC HRC administrators to organize community volunteers and utilize a QR code scanning technology to track the distribution of Naloxone (Narcan) kits. It vastly improves the current processess by ensuring data accuracy, efficiency, and security in data collection and analysis.</p>
-    <img class="flexItem" src="https://cdn.glitch.com/98275561-882d-4111-9705-1b927de65bc4%2Ftraction-app.png?1540774531787" alt="Traction App">
+    <p>This mobile and desktop app aims to aid the <a href="http://www.nchrc.org/" target="blank">NC Harm Reduction Coalition (NC HRC)</a> and other groups in fighting the statewide opioid crisis. Developed by a team of 5 junior developers in 2.5 weeks as a capstone project presented at <a href="images/DemoDayProgram.pdf" target="blank">Demo Day</a> from <a href="https://www.momentumlearn.com/" target="blank">Momentum's</a> immersive coding program. It's twofold function will allow NC HRC administrators to organize community volunteers and utilize a QR code scanning technology to track the distribution of Naloxone (Narcan) kits. It vastly improves the current processess by ensuring data accuracy, efficiency, and security in data collection and analysis.</p>
+    <img class="flexItem" src="images/traction-app.png" alt="Traction App">
     </div>
 
     <div class="flexContainer">
@@ -38,7 +38,7 @@
           <a href="https://github.com/lstravers/Gameday-Comment-Tracker">GitHub</a> 
         </div>
       <p>An example of a reddis/twitter-style app, this project was created by a team of 3 junior developers and includes secure signup and login/out functions.</p>
-      <img class="flexItem" src="https://cdn.glitch.com/98275561-882d-4111-9705-1b927de65bc4%2Fgameday-comment-tracker.png?1540774610005" alt="Game Day Comment Tracker">
+      <img class="flexItem" src="images/gameday-comment-tracker.png" alt="Game Day Comment Tracker">
     </div>
 
     <div class="flexContainer">
@@ -47,7 +47,7 @@
             <a href="https://github.com/lstravers/readers-realm" target="blank">Github</a>
         </div>
       <p>A book library app created individually that allows users (readers) to view a list of all books, add new books, and edit or remove books.</p>
-      <img class="flexItem" src="https://cdn.glitch.com/98275561-882d-4111-9705-1b927de65bc4%2Freaders-realm.png?1541434988987" alt="Reader's Realm">  
+      <img class="flexItem" src="images/readers-realm.png" alt="Reader's Realm">  
     </div>
 
     <div class="flexContainer">
@@ -56,7 +56,7 @@
           <a href="https://github.com/lstravers/railsbridge-suggestotron" target="blank">Github</a>
         </div>
       <p>A simple topic voting app created during a one-day <a href="http://railsbridgetriangle.com/" target="blank">RailsBridgeTriangle</a> workshop.</p>
-      <img class="flexItem" src="https://cdn.glitch.com/98275561-882d-4111-9705-1b927de65bc4%2Fsuggest-o-tron.png?1541443050866" alt="Suggest-o-tron">
+      <img class="flexItem" src="images/suggest-o-tron.png" alt="Suggest-o-tron">
     </div>
 
     <div class="flexContainer">
@@ -66,7 +66,7 @@
         <a href="https://glitch.com/edit/#!/warm-hero-w1d2">GitHub</a>
       </div>
       <p>This is an example of a very basic dog adoption website. Created individually it shows the use of basic HTML, CSS, and Flexbox code.</p> 
-      <img class="flexItem" src="https://cdn.glitch.com/98275561-882d-4111-9705-1b927de65bc4%2FdogAdoptionPic.png?1540775356832" alt="Dog Adoption Site">
+      <img class="flexItem" src="images/dogAdoptionPic.png" alt="Dog Adoption Site">
     </div>  
 
     <div class="flexContainer">
@@ -76,7 +76,7 @@
         <a href="https://glitch.com/edit/#!/plant-nursery">GitHub</a>
       </div>
       <p>This is an example of a very basic plant nursery website (created individually using HTML and CSS code).</p>   
-      <img class="flexItem" src="https://cdn.glitch.com/98275561-882d-4111-9705-1b927de65bc4%2FplantNurseryPic.png?1540774565538" alt="Plant Nursery Site">
+      <img class="flexItem" src="images/plantNurseryPic.png" alt="Plant Nursery Site">
     </div>
 
     <a href="index.html">Back</a>
