modify resume file to open in new tab

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="https://www.youtube.com/watch?v=OtG0iYPGEdI&amp=&t=49s" target="blank">
           <i class="fa fa-youtube" style="font-size:80px; color: black"></i></a>
 
-        <a href="images/Stravers_Resume.pdf"> 
+        <a href="images/Stravers_Resume.pdf" target="blank"> 
           <i class="fa fa-file-text-o" style="font-size:80px; color: black"></i></a>
 
         <a href="projects.html">
