spelling correction and wording modification

--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
     <h1 class="header">PROJECTS</h1>
   
     <div class="flexContainer">
-      <h3>The projects below are listed in order of decreasing difficulty. They were developed both individually and as team projects as I progressed through <a href="https://www.momentumlearn.com/" target="blank">Momentum's</a> immersive coding curriculum.</h3>
+      <h3>The projects below are listed in order of decreasing difficulty. They were developed both individually and as team projects as I progressed through <a href="https://www.momentumlearn.com/" target="blank">Momentum Learning's</a> immersive coding curriculum.</h3>
     </div>
 
     <div class="flexContainer">
@@ -27,7 +27,7 @@
             <a href="https://harm-reduction-tracker.herokuapp.com/" target="blank">Live Site  |</a> 
             <a href="https://github.com/lstravers/traction-app" target="blank">Github</a>
           </div>
-    <p>This mobile and desktop app aims to aid the <a href="http://www.nchrc.org/" target="blank">NC Harm Reduction Coalition (NC HRC)</a> and other groups in fighting the statewide opioid crisis. Developed by a team of 5 junior developers in 2.5 weeks as a capstone project presented at <a href="images/DemoDayProgram.pdf" target="blank">Demo Day</a> from <a href="https://www.momentumlearn.com/" target="blank">Momentum's</a> immersive coding program. It's twofold function will allow NC HRC administrators to organize community volunteers and utilize a QR code scanning technology to track the distribution of Naloxone (Narcan) kits. It vastly improves the current processess by ensuring data accuracy, efficiency, and security in data collection and analysis.</p>
+    <p>This mobile and desktop app aims to aid the <a href="http://www.nchrc.org/" target="blank">NC Harm Reduction Coalition (NC HRC)</a> and other groups in fighting the statewide opioid crisis. Developed by a team of 5 junior developers in 2.5 weeks as a capstone project presented at <a href="images/DemoDayProgram.pdf" target="blank">Demo Day</a> from <a href="https://www.momentumlearn.com/" target="blank">Momentum's</a> immersive coding program. It's twofold function will allow NC HRC administrators to organize community volunteers and utilize a QR code scanning technology to track the distribution of Naloxone (Narcan) kits. It vastly improves the current processes by ensuring data accuracy, efficiency, and security in data collection and analysis.</p>
     <img class="flexItem" src="images/traction-app.png" alt="Traction App">
     </div>
 
